2012-05-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/bigrational.cc (^): Q^n  and Z^n now also work for negative
	'n' and with NA's.

	* R/bigq.R (as.bigz.bigq): as.bigz(as.bigq(NA)) now works

2012-05-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/bigrationalR.cc (bigrational_pow, mpqz_pow):
	* src/bigrational.cc (operator^): add   <bigq> ^ n   functionality.
	* TODO: (one less :-)

2012-05-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.5-2

	* src/bigintegerR.cc (bigI_choose, bigI_factorial): now vectorized.
	* man/factorialZ.Rd: updated, including examples

2012-01-20 Antoine Lucas

	* tests/gmp-test.R: update

2012-01-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE,
	* src/init.cc: new file, providing proper registration
	* R/zzz.R: new gmpVersion() [to get GMP C library version].

2012-01-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/biginteger.R (as.bigz): mod=NULL now is equivalent to NA;
	 important for  'modulus(x) <- NULL' to work.

2012-01-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/modulus.Rd: example, (and FIXME)

	* TODO: as.bigz(integer()) and as.bigq(integer()) now both work and
	give a 0-length object; analogously, the basic functions now work
	with the 0-length big[qz] vectors and return 0-length.

	* src/bigintegerR.cc (create_SEXP): ensure the modulus also has
	class "bigz".

2012-01-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/matrix-prods.R: new file, containing all %*%, and new
	crossprod, tcrossprod methods.
	<bigz> %*% <double>  now works, too.

2011-12-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/bigintegerR.cc (biginteger_as_integer): new
	(biginteger_log, biginteger_log2): new --> allowing proper log().

	* R/biginteger.R (as.integer.bigz): new -- gave nonsense!
	* R/biginteger.R (log.bigz): now work correctly also for large numbers.

2011-12-29  Martin Maechler  <maechler@stat.math.ethz.ch>
