@@ -1,20 +1,20 @@
-923fcaf51f899a7b6a5f713e98bad0a1 *ChangeLog
+ce4a3668c9b84c4410d772c1c9799e3b *ChangeLog
 ebb3e86d6b9fae7939450340f88b351e *Changes
-c972da2103035bcd5d9bb2f6a8b5c65c *DESCRIPTION
-1f7abdcbdfb70de5d5079b52347960c1 *NAMESPACE
+b8b98de42adba5e979392c4d8522915b *DESCRIPTION
+213bb431c50505410bdd88ab43ee2f58 *NAMESPACE
 d5b7cae90ea3d09107b11f8a93a00068 *R/Stirling-n-etc.R
-ef50564fe2fcd4cea013cbb98023d395 *R/biginteger.R
-a71b9817adce787d7da75713b7e040bb *R/bigq.R
+806e6cab10758a6f8bb802009f1239fa *R/biginteger.R
+3cfd29ec6c589c8c52d8d2c9155f0737 *R/bigq.R
 4f93a5bd2e13ca09e045ab5f3550177c *R/matrix-prods.R
 2c7495336543f717597dd04a6b6cb37e *R/matrixq.R
-6cb510a94e9e8514c0ebd5cdd8c6b0ed *R/matrixz.R
+1d6095b543f05267ee3869fa02f5a323 *R/matrixz.R
 9200d4dcc0916dfb771701a61302db3d *R/zzz.R
-683f8007146e7a6a68c54865c6b39949 *TODO
+1eb9bea2068b4a6c94e18693cc370657 *TODO
 7ef5d9518941a67592b3892e11490509 *cleanup
-2cf8731156948c74a4a0021e336722a8 *configure
-df9166a906cc91b8b84c7a04b18207fd *configure.in
-d27e8053c621c96a93858df61afe276f *data/Oakley1.rda
-9233690f77fa3203f3e0703ae392b3b3 *data/Oakley2.rda
+9366fb9d23bb8b70e7622853557baedb *configure
+5b7f5def4b65b93d8c504e1fff580325 *configure.in
+532f14ba0f5b1982b7d30a32be1c98cd *data/Oakley1.R
+b69670afa6fa68a8bcbfbfe897bdf0c3 *data/Oakley2.R
 c34d920a58b0fdc31a92f67da2103104 *inst/doc/annotated.html
 012958b60752de46980a6f61c8ef8c64 *inst/doc/bigintegerR_8cc.html
 0cb5a235a74b1f410f7de5a430889097 *inst/doc/biginteger_8cc.html
@@ -34,6 +34,7 @@ b35ce838e65de2517d8d368ce37093cd *man/Oakley.Rd
 e51c494bb4f3b9dd17b1c71f119534c5 *man/Stirling.Rd
 1d6b1c2831e9097d412fc191be6c9a0e *man/add.biginteger.Rd
 c67bdf971595c0339917ebe3c37f101b *man/apply.Rd
+2a86c956e9f1159ffd83504fd6c2b35a *man/asNumeric.Rd
 76af01044364efa0a504c465e77a02fe *man/biginteger.Rd
 a0c1b181b03df9e7eadf62e6265ec4d6 *man/biginteger.rand.Rd
 9e3c829c67afac416690e655a5bc53d5 *man/bigrational.Rd
@@ -56,7 +57,7 @@ d715863204daa6ca754ba935d1b18d85 *man/isprime.Rd
 3b4be720dc8683c72a2c73f3763203e8 *man/nextprime.Rd
 76a66fb6ca7137248b65b7bf39f1fbf8 *man/operators_bigq.Rd
 abafd95558517a2a0b6f8a9b4671f514 *man/powm.Rd
-8b64b6dea483165fdc4b49f91bad7078 *man/sizeinbase.Rd
+47456c57f17546c0c9a8d0c38419bdbb *man/sizeinbase.Rd
 a7dd42da7e0f791ce922ec54a7c67270 *man/solve.Rd
 a670bc14f246a1616bd860f54e5775ca *man/utils.Rd
 8292ba511dd54d167ba42ac7899e741c *src/Makevars.in
@@ -66,7 +67,7 @@ a670bc14f246a1616bd860f54e5775ca *man/utils.Rd
 2f25f95aedc17f66633efad43411089a *src/apply.h
 8350226d4cf61244918867be4540d835 *src/biginteger.cc
 599fbfe665097436e3268c760714a48d *src/biginteger.h
-2a8392079bc7193a619ae4e4bcb1d223 *src/bigintegerR.cc
+f2efcd04e45cfe95405ec7227cb3c330 *src/bigintegerR.cc
 edee7a7c4a5d579c0b36275b4de4d563 *src/bigintegerR.h
 8e4af979bd432cac87eaf9f27716b67a *src/bigmod.cc
 28b0f44a8d46fb7c34b49e6c0833d30c *src/bigmod.h
@@ -92,4 +93,4 @@ b2aaf94becc698dc4ba3968a124186fe *src/solve.h
 b3c72ee738dfac750db43eeb1aae6d2f *tests/arith-ex.R
 ab41d104fe5d20e63c941c68aae57e3c *tests/basic-ex.R
 f9488adcf99937507920ffa60325b987 *tests/gmp-test.R
-ce70b31d3750ee087e51cd1cd85ac564 *tests/gmp-test.Rout.save
+fb4995d965741a1735d24aea90a0a108 *tests/gmp-test.Rout.save
